--- a/assets/index.html
+++ b/assets/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="assets/js/lib/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
 
-
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
