--- a/assets/index.html
+++ b/assets/index.html
@@ -4,12 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo List</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="assets/js/lib/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
+
+    <div id="container">
+        <h1>To-Do List</h1>
+        <input type="text">
+        <ul>
+            <li><span>X </span>Go To Potions class</li>
+            <li><span>X </span>Buy New Robes</li>
+            <li><span>X </span>Visit Hagrid</li>
+        </ul>
+    </div>
 
     <script type="text/javascript" src="js/app.js"></script>
 </body>
