--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/lib/jquery-3.5.1.min.js"></script>
 </head>
@@ -13,7 +14,7 @@
 
     <div id="container">
         <h1>To-Do List</h1>
-        <input type="text">
+        <input type="text" placeholder="Add New Todo">
         <ul>
             <li><span>X </span>Go To Potions class</li>
             <li><span>X </span>Buy New Robes</li>
