--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/lib/jquery-3.5.1.min.js"></script>
 </head>
@@ -13,12 +14,12 @@
 <body>
 
     <div id="container">
-        <h1>To-Do List</h1>
-        <input type="text" placeholder="Add New Todo">
+        <h1>To-Do List<i class="fa fa-plus" aria-hidden="true"></i></h1>
+        <input type="text" placeholder="Add a new task...">
         <ul>
-            <li><span>X </span>Go To Potions class</li>
-            <li><span>X </span>Buy New Robes</li>
-            <li><span>X </span>Visit Hagrid</li>
+            <li><span><i class="fa fa-trash" ></i></span> Go To Potions class</li>
+            <li><span><i class="fa fa-trash" ></i></span> Buy New Robes</li>
+            <li><span><i class="fa fa-trash" ></i></span> Visit Hagrid</li>
         </ul>
     </div>
 
