--- a/assets/index.html
+++ b/assets/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div id="container">
-        <h1>To-Do List<i class="fa fa-plus" aria-hidden="true"></i></h1>
+        <h1>To-Do List<i class="fa fa-plus hidden" aria-hidden="true"></i><i class="fa fa-minus" aria-hidden="true"></i></h1>
         <input type="text" placeholder="Add a new task...">
         <ul>
             <li><span><i class="fa fa-trash" ></i></span> Go To Potions class</li>
