removed placeholder todos

--- a/assets/index.html
+++ b/assets/index.html
@@ -17,9 +17,9 @@
         <h1>To-Do List<i class="fa fa-plus hidden" aria-hidden="true"></i><i class="fa fa-minus" aria-hidden="true"></i></h1>
         <input type="text" placeholder="Add a new task...">
         <ul>
-            <li><span><i class="fa fa-trash" ></i></span> Go To Potions class</li>
+            <!-- <li><span><i class="fa fa-trash" ></i></span> Go To Potions class</li>
             <li><span><i class="fa fa-trash" ></i></span> Buy New Robes</li>
-            <li><span><i class="fa fa-trash" ></i></span> Visit Hagrid</li>
+            <li><span><i class="fa fa-trash" ></i></span> Visit Hagrid</li> -->
         </ul>
     </div>
 
